# AiFinIntern

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGES.md  CLAUDE.md  DECISIONS.md  README.md  RISKS.md  ROADMAP.md  TESTING.md  prompt.md  pyproject.toml  requirements.txt  test.py  walkthrough.md
.claude/memory/architecture/: AGENTS.md  ARCHITECTURE.md
.claude/memory/guides/windows/: IB_TWS_INSTALLATION_WINDOWS.md  WINDOWS_FIREWALL_SETUP.md
.claude/memory/planning/: DECISIONS.md  RISKS.md  ROADMAP.md
.claude/memory/research/ib-api/: IB_API_TESTING_SETUP_TODOS.md  QUICK_START_IB_RESEARCH.md
.claude/memory/research/milestones/: PHASE_3_COMPLETION_SUMMARY.md
.claude/memory/tracking/: CHANGES.md  DEPENDENCIES.md  TESTING.md
.claude/samples/ib-testbed/: Program.py
.claude/walkthrough_sections/: walkthrough_2_3.md  walkthrough_task2_2.md
Code/: order.py
components/data_layer/: README.md
components/data_layer/agents/: api_client_research_agent.md
components/execution_layer/: README.md
components/reporting/: README.md
components/strategy_layer/: README.md
components/tax_recon/: README.md
data/: clean_and_merge_data.py  fetch_news_headlines.py  fetch_price_data.py
docs/: IB_API_INTEGRATION_RESEARCH.md  QUICK_START_IB_RESEARCH.md
docs/windows/: IB_API_CONFIGURATION_WINDOWS.md  IB_GATEWAY_INSTALLATION_WINDOWS.md  INSTALLATION_CHECKLIST.md
research/ib_api/: README.md
tests/: test_clean_and_merge_data.py  test_cuda.py  test_fetch_news_headlines.py  test_fetch_price_data.py  test_library_import.py
tests/ib_api/: README.md  base_test.py  pytest.ini
tests/ib_api/account/: test_01_account_summary.py  test_02_account_values.py  test_03_positions.py  test_04_pnl.py
tests/ib_api/basic/: test_01_connection.py  test_02_connection_retry.py  test_03_multiple_clients.py  test_04_connection_timeout.py
tests/ib_api/config/: logging_config.py  test_config.py
tests/ib_api/fixtures/: test_data.py
tests/ib_api/helpers/: contracts.py  ib_wrapper.py  orders.py
tests/ib_api/market_data/: test_01_realtime_quotes.py  test_02_historical_data.py
