[tool.poetry]
name = "aifinintern"
version = "0.1.0"
description = "AI-Driven Quantitative Trading Bot with Tax Reconciliation and ML Fine-Tuning"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lolisaigao1234/AiFinIntern"
repository = "https://github.com/lolisaigao1234/AiFinIntern"
documentation = "https://github.com/lolisaigao1234/AiFinIntern"
keywords = ["trading", "quantitative", "machine-learning", "tax", "interactive-brokers", "fintech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.poetry.dependencies]
python = "^3.14"

# Core Trading & Market Data
ib-insync = "^0.9.86"
ibapi = "^9.81.1"

# Data Processing & Analysis
pandas = "^2.1.4"
numpy = "^1.26.2"
polars = "^0.19.19"
pyarrow = "^14.0.1"
scipy = "^1.11.4"
ta-lib = "^0.4.28"

# Deep Learning Frameworks
# NOTE: PyTorch with CUDA must be installed separately with:
#   poetry run pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu121
torch = {version = "^2.5.1", source = "pytorch-cu121", optional = true}
torchvision = {version = "^0.20.1", source = "pytorch-cu121", optional = true}
torchaudio = {version = "^2.5.1", source = "pytorch-cu121", optional = true}
tensorflow = {version = "^2.18.0", extras = ["and-cuda"]}

# Hugging Face Ecosystem
transformers = "^4.46.3"
datasets = "^3.1.0"
tokenizers = "^0.20.3"
accelerate = "^1.1.1"
evaluate = "^0.4.3"
huggingface-hub = "^0.26.2"
safetensors = "^0.4.5"
sentencepiece = "^0.2.0"
protobuf = "^5.28.3"
bitsandbytes = "^0.44.1"
peft = "^0.13.2"

# Traditional ML
scikit-learn = "^1.6.0"
xgboost = "^2.1.3"
lightgbm = "^4.5.0"
catboost = "^1.2.7"

# Model Utilities
joblib = "^1.4.2"
optuna = "^4.1.0"
shap = "^0.46.0"
tensorboard = "^2.18.0"
wandb = "^0.18.7"

# Database & Storage
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
redis = "^5.0.1"
hiredis = "^2.3.2"

# Web Framework & API
fastapi = "^0.108.0"
uvicorn = {version = "^0.25.0", extras = ["standard"]}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
websockets = "^12.0"

# Async & Concurrency
asyncio = "^3.4.3"
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"
aiocache = "^0.12.2"

# Data Visualization & Reporting
plotly = "^5.18.0"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
dash = "^2.14.2"
dash-bootstrap-components = "^1.5.0"
kaleido = "^0.2.1"
reportlab = "^4.0.8"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"
jinja2 = "^3.1.2"

# Configuration Management
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"
toml = "^0.10.2"
configparser = "^6.0.0"

# Date & Time
python-dateutil = "^2.8.2"
pytz = "^2023.3"
arrow = "^1.3.0"

# Logging & Monitoring
structlog = "^23.2.0"
python-json-logger = "^2.0.7"
loguru = "^0.7.2"
prometheus-client = "^0.19.0"
sentry-sdk = {version = "^1.39.2", extras = ["fastapi"]}

# HTTP & Requests
requests = "^2.31.0"
httpx = "^0.26.0"
urllib3 = "^2.1.0"

# Data Validation & Parsing
marshmallow = "^3.20.1"
cerberus = "^1.3.5"
jsonschema = "^4.20.0"

# Retry & Resilience
tenacity = "^8.2.3"
backoff = "^2.2.1"

# Cryptography & Security
cryptography = "^41.0.7"
pyjwt = "^2.8.0"
bcrypt = "^4.1.2"

# Task Scheduling
apscheduler = "^3.10.4"
celery = "^5.3.4"

# Financial & Trading Specific
yfinance = "^0.2.33"
alpha-vantage = "^2.3.1"
fredapi = "^0.5.1"
pandas-datareader = "^0.10.0"
quantlib = "^1.31"
pyfolio = "^0.9.2"
empyrical = "^0.5.5"
zipline-reloaded = "^3.0.3"

# Utilities
click = "^8.1.7"
rich = "^13.7.0"
tqdm = "^4.66.1"
colorama = "^0.4.6"
pathlib2 = "^2.3.7"
watchdog = "^3.0.0"
orjson = "^3.9.10"
msgpack = "^1.0.7"
pickle5 = "^0.0.12"

# Environment & Platform
python-magic = "^0.4.27"
psutil = "^5.9.6"
distro = "^1.8.0"

# GPU Acceleration (CUDA)
cupy-cuda12x = "^13.3.0"
nvidia-cuda-runtime-cu12 = "^12.6.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
hypothesis = "^6.92.1"
faker = "^22.0.0"
responses = "^0.24.1"

# Code Quality
black = "^23.12.1"
ruff = "^0.1.9"
isort = "^5.13.2"
autopep8 = "^2.0.4"

# Type Checking
mypy = "^1.7.1"
types-redis = "^4.6.0"
types-requests = "^2.31.0"
types-pyyaml = "^6.0.12"

# Documentation
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.3"

# Pre-commit
pre-commit = "^3.6.0"

# Debugging
ipython = "^8.19.0"
ipdb = "^0.13.13"
pdbpp = "^0.10.3"

# Performance & Profiling
memory-profiler = "^0.61.0"
line-profiler = "^4.1.1"
py-spy = "^0.3.14"
pyinstrument = "^4.6.1"

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^4.0.10"
notebook = "^7.0.6"
ipywidgets = "^8.1.1"

[tool.poetry.extras]
cuda = ["torch", "torchvision", "torchaudio"]
jupyter = ["jupyter", "jupyterlab", "notebook", "ipywidgets"]
all = ["torch", "torchvision", "torchaudio", "jupyter", "jupyterlab", "notebook", "ipywidgets"]

[[tool.poetry.source]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aifinintern = "components.main:main"

# ============================================================================
# Black Configuration
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# ============================================================================
# Ruff Configuration
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py314"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-first-party = ["components"]

# ============================================================================
# MyPy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "ib_insync.*",
    "ibapi.*",
    "ta.*",
    "quantlib.*",
    "pyfolio.*",
    "empyrical.*",
    "zipline.*",
]
ignore_missing_imports = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=components",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "gpu: marks tests requiring GPU",
    "paper_trading: marks tests for paper trading validation",
]

[tool.coverage.run]
branch = true
source = ["components"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "pass",
]

# ============================================================================
# Isort Configuration
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["components"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ============================================================================
# Bandit Configuration (Security Linter)
# ============================================================================
[tool.bandit]
exclude_dirs = ["/tests", "/migrations", "/venv"]
skips = ["B101", "B601"]
